# RayD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/constraints/: drjit-build.txt
.github/workflows/: pypi.yml
cmake/: embed_ptx.cmake
docs/: api_reference.md  build_optimization.md  edge_bvh_bottleneck_analysis.md  edge_bvh_lbvh_treelet_improvement_plan.md  edge_bvh_optimization_log.md  edge_bvh_stage3_preparation.md  multi_bounce_reflection_trace.md  performance_benchmark.json  reflection_trace_gpu_dedup.md  slang_interop.md
examples/: README.md
examples/basics/: camera_edge_sampling_gradient.py  nearest_edge_query.py  ray_mesh_intersection.py
examples/renderer/: README.md  acoustic.py  cornell_box.py  optical.py
include/: rayd_slang.slang
include/rayd/: camera.h  constants.h  edge.h  fwd.h  intersection.h  mesh.h  optix.h  ray.h  rayd.h  reflection.h  transform.h  types.h  utils.h
include/rayd/scene/: scene.h  scene_edge.h  scene_optix.h
include/rayd/slang/: interop.h  interop_types.h  rayd.slang
include/raydi/: camera.h  constants.h  edge.h  fwd.h  intersection.h  mesh.h  optix.h  ray.h  raydi.h  transform.h  types.h  utils.h
include/raydi/scene/: scene.h  scene_edge.h  scene_optix.h
rayd/slang/: __init__.py
rayd/torch/: __init__.py  _convert.py  _env.py  _interop_patch.py  _native.py  _util.py  camera.py  mesh.py  scene.py  types.py
src/: camera.cpp  mesh.cpp  native_launch_audit.cpp  native_launch_audit.h  optix.cpp  rayd.cpp  raydi.cpp  slang_interop.cpp
src/multipath/: reflection_dedup.cu  reflection_dedup.h  reflection_trace_host.cpp  reflection_trace_params.h  reflection_trace_ptx.h
src/rayd/: __init__.py
src/rayd/torch/: __init__.py  _convert.py  _state.py  mesh.py
src/raydi/: __init__.py
src/scene/: edge_bvh.cu  edge_bvh.h  edge_bvh_config.h  reflection_trace.cu  reflection_trace_host.h  scene.cpp  scene_edge.cpp  scene_optix.cpp
src/scene/experimental/: edge_bvh_ploc.h  edge_bvh_ploc_build.inc  edge_bvh_ploc_kernels.inc  scene_edge_ploc.inc
tests/: baseline_cases.py  baseline_utils.py  benchmark_edge_bvh_cutoff_compare.py  benchmark_edge_bvh_pressure.py  benchmark_edge_bvh_stages.py  benchmark_edge_queries.py  benchmark_support.py  profile_kernel_launches.py  test_baseline.py  test_geometry.py  test_project_metadata.py  test_torch_geometry.py  test_torch_interop_patch.py
tests/baselines/drjit_v0_4_6/: manifest.json
tests/baselines/drjit_v0_4_6/camera/: perspective_fov.json  perspective_intrinsic.json  sample_primary_ray.json  sample_to_world.json  world_to_sample.json
tests/baselines/drjit_v0_4_6/edges/: primary_edge_sampling.json  secondary_edges.json
tests/baselines/drjit_v0_4_6/geometry/: batched_hits.json  constant_hit.json  degenerate.json  miss.json  multi_mesh.json  uv.json
tests/baselines/drjit_v0_4_6/gradients/: transform_gradients.json  vertex_gradients.json
tests/baselines/drjit_v0_4_6/stress/: repeated_run_summary.json
tests/baselines/drjit_v0_4_6/transforms/: composition_left_right.json  direction_transform_checks.json  matrix_entry_checks.json  point_transform_checks.json
tests/drjit/: test_baseline.py  test_geometry.py
tests/slang/: test_interop.slang  test_slang.py
tests/slang/cases/: load_module_error.py  slang_ad_autograd.py  slang_ad_multi_param.py  slang_ad_optimize.py  slang_ad_struct_return.py  slang_rayd_e2e_ad.py  slang_rayd_e2e_ad_multi.py  slang_rayd_e2e_multi_query.py  slang_rayd_e2e_optimize.py  slang_rayd_gradient_ad.py  slang_rayd_gradient_ad_all.py  slang_rayd_gradient_fwd_bwd.py  slang_rayd_gradient_inverse_depth.py  slang_rayd_gradient_squared_depth.py  slang_rayd_intersect.py  slang_rayd_nearest_edge.py
tests/slang/shaders/: rayd_query.slang  rayd_query_ad.slang
tests/torch/: test_edge_bvh_pressure.py  test_geometry.py
