[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind==2.11.0", "drjit>=1.3.0"]
build-backend = "scikit_build_core.build"


[project]
name = "raydi"
version = "0.1.0"
description = "RayDi: minimalist differentiable ray tracing package wrapping Dr.Jit and OptiX."
readme = "README.md"
authors = [{ name = "Xingyu Chen" }]

requires-python = ">=3.10"
dependencies = ["drjit>=1.3.0"]

[tool.scikit-build]
cmake.verbose = true
wheel.expand-macos-universal-tags = true
build-dir = "build/{wheel_tag}"
